// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServerStyleRegistry registering an existing key does not update the style 1`] = `
<style data-trousers={1}>
  1{background-color:red;}
</style>
`;

exports[`ServerStyleRegistry registers a new style 1`] = `
<style data-trousers={1}>
  1{background-color:red;}
</style>
`;

exports[`ServerStyleRegistry renders registered styles in the right format 1`] = `
<style data-trousers={1,2}>
  1{background-color:red;}
  2{background-color:blue;}
</style>
`;
